syntax="proto3";
package services;

option go_package = "build/services";

// register messages
message RegisterRequest {
	string username = 1;
	string email = 2;
}
message RegisterResponse {
	// token uuid
	string uuid = 1;
}

// confirm registration messages
message ConfirmRegistrationRequest {
	string uuid = 1; // userinvite id
	string password = 2;
	string confirm_password = 3;
}
message ConfirmRegistrationResponse {
	string id = 1; // user id
}

service RegistrationService {
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc ConfirmRegistration(ConfirmRegistrationRequest) returns (ConfirmRegistrationResponse) {}
}